kafka: schema registry migrate the subject compatibility level
Fixes CON-116

--- a/docs/modules/components/pages/inputs/schema_registry.adoc
+++ b/docs/modules/components/pages/inputs/schema_registry.adoc
@@ -92,6 +92,7 @@ This input adds the following metadata fields to each message:
 
 ```text
 - schema_registry_subject
+- schema_registry_subject_compatibility_level
 - schema_registry_version
 ```
 
