--- a/docs/modules/components/pages/processors/protobuf.adoc
+++ b/docs/modules/components/pages/processors/protobuf.adoc
@@ -44,6 +44,7 @@ The main functionality of this processor is to map to and from JSON documents, y
 
 Using reflection for processing protobuf messages in this way is less performant than generating and using native code. Therefore when performance is critical it is recommended that you use Redpanda Connect plugins instead for processing protobuf messages natively, you can find an example of Redpanda Connect plugins at [https://github.com/redpanda-data/redpanda-connect-plugin-example](https://github.com/redpanda-data/redpanda-connect-plugin-example)
 
+The processor will ignore any files that begin with a dot ("."g), a convention for hidden files, when loading protocol buffer definitions.
 == Operators
 
 === `to_json`
