--- a/docs/modules/components/pages/outputs/gcp_cloud_storage.adoc
+++ b/docs/modules/components/pages/outputs/gcp_cloud_storage.adoc
@@ -139,6 +139,7 @@ This output benefits from sending messages as a batch for improved performance. 
 === `bucket`
 
 The bucket to upload messages to.
+This field supports xref:configuration:interpolation.adoc#bloblang-queries[interpolation functions].
 
 
 *Type*: `string`
