redpanda/migrator: remove unsupported config option
In franz.go we return error whenever one someone sets key, partition or timestamp_ms; topic has already been duplicated, and now our definition is active; metadata is also removed for no clear reason.

I thought also about filtering by name but we lack APIs in benthos to do that.

--- a/docs/modules/components/pages/inputs/redpanda_migrator.adoc
+++ b/docs/modules/components/pages/inputs/redpanda_migrator.adoc
@@ -505,7 +505,7 @@ An external ID to provide when assuming a role.
 
 === `metadata_max_age`
 
-The maximum age of metadata before it is refreshed.
+The maximum age of metadata before it is refreshed. This interval also controls how frequently regex topic patterns are re-evaluated to discover new matching topics.
 
 
 *Type*: `string`
@@ -569,7 +569,7 @@ topics:
 
 === `regexp_topics`
 
-Whether listed topics should be interpreted as regular expression patterns for matching multiple topics. When topics are specified with explicit partitions this field must remain set to `false`.
+Whether listed topics should be interpreted as regular expression patterns for matching multiple topics. When enabled, the client will periodically refresh the list of matching topics based on the `metadata_max_age` interval. When topics are specified with explicit partitions this field must remain set to `false`.
 
 
 *Type*: `bool`
