--- a/docs/modules/components/pages/inputs/cassandra.adoc
+++ b/docs/modules/components/pages/inputs/cassandra.adoc
@@ -39,6 +39,7 @@ input:
   cassandra:
     addresses: [] # No default (required)
     timeout: 600ms
+    reconnect_interval: 60s
     query: "" # No default (required)
     auto_replay_nacks: true
 ```
@@ -74,6 +75,11 @@ input:
     host_selection_policy:
       local_dc: "" # No default (optional)
       local_rack: "" # No default (optional)
+    reconnect_interval: 60s
+    exponential_reconnection:
+      reconnection_max_retries: 0 # No default (required)
+      reconnection_initial_interval: "" # No default (required)
+      reconnection_max_interval: "" # No default (required)
     query: "" # No default (required)
     auto_replay_nacks: true
 ```
@@ -412,6 +418,47 @@ The local DC to use, enables DC aware policy.
 === `host_selection_policy.local_rack`
 
 The local rack to use, requires local_dc to be set, enables rack aware policy.
+
+
+*Type*: `string`
+
+
+=== `reconnect_interval`
+
+Attempts to reconnect known DOWN nodes in every ReconnectInterval.
+
+
+*Type*: `string`
+
+*Default*: `"60s"`
+
+=== `exponential_reconnection`
+
+Optional exponential reconnection policy, this replaces the default constant policy of the driver.
+
+
+*Type*: `object`
+
+
+=== `exponential_reconnection.reconnection_max_retries`
+
+The maximum number of retry attempts.
+
+
+*Type*: `int`
+
+
+=== `exponential_reconnection.reconnection_initial_interval`
+
+The initial period to wait between retry attempts.
+
+
+*Type*: `string`
+
+
+=== `exponential_reconnection.reconnection_max_interval`
+
+The maximum period to wait between retry attempts.
 
 
 *Type*: `string`
