adding tcp settings to aws component
Update internal/impl/aws/session.go

Co-authored-by: Ashley Jeffs <ash@jeffail.uk>

--- a/docs/modules/components/pages/inputs/aws_kinesis.adoc
+++ b/docs/modules/components/pages/inputs/aws_kinesis.adoc
@@ -74,6 +74,7 @@ input:
       write_capacity_units: 0
       region: "" # No default (optional)
       endpoint: "" # No default (optional)
+      tcp_user_timeout: 0s
       credentials:
         profile: "" # No default (optional)
         id: "" # No default (optional)
@@ -91,6 +92,7 @@ input:
     start_from_oldest: true
     region: "" # No default (optional)
     endpoint: "" # No default (optional)
+    tcp_user_timeout: 0s
     credentials:
       profile: "" # No default (optional)
       id: "" # No default (optional)
@@ -218,6 +220,15 @@ Allows you to specify a custom endpoint for the AWS API.
 
 *Type*: `string`
 
+
+=== `dynamodb.tcp_user_timeout`
+
+Linux-specific TCP_USER_TIMEOUT for more fine grained connection stalling detection. How long to wait for acknowledgment of transmitted data on an established conenction before killing the connection. Only applies to connections in ESTAB state. Set to 0 (default) to disable.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `dynamodb.credentials`
 
@@ -367,6 +378,15 @@ Allows you to specify a custom endpoint for the AWS API.
 
 *Type*: `string`
 
+
+=== `tcp_user_timeout`
+
+Linux-specific TCP_USER_TIMEOUT for more fine grained connection stalling detection. How long to wait for acknowledgment of transmitted data on an established conenction before killing the connection. Only applies to connections in ESTAB state. Set to 0 (default) to disable.
+
+
+*Type*: `string`
+
+*Default*: `"0s"`
 
 === `credentials`
 
