--- a/docs/modules/components/pages/inputs/microsoft_sql_server_cdc.adoc
+++ b/docs/modules/components/pages/inputs/microsoft_sql_server_cdc.adoc
@@ -45,7 +45,7 @@ input:
     include: [] # No default (required)
     exclude: [] # No default (optional)
     checkpoint_cache: "" # No default (optional)
-    checkpoint_cache_table_name: rpcn.cdc_checkpoint_cache
+    checkpoint_cache_table_name: rpcn.CdcCheckpointCache
     checkpoint_cache_key: microsoft_sql_server_cdc
     checkpoint_limit: 1024
     stream_backoff_interval: 5s
@@ -73,7 +73,7 @@ input:
     include: [] # No default (required)
     exclude: [] # No default (optional)
     checkpoint_cache: "" # No default (optional)
-    checkpoint_cache_table_name: rpcn.cdc_checkpoint_cache
+    checkpoint_cache_table_name: rpcn.CdcCheckpointCache
     checkpoint_cache_key: microsoft_sql_server_cdc
     checkpoint_limit: 1024
     stream_backoff_interval: 5s
@@ -99,6 +99,10 @@ This input adds the following metadata fields to each message:
 - table (Name of the table that the message originated from)
 - operation (Type of operation that generated the message: "read", "delete", "insert", or "update_before" and "update_after". "read" is from messages that are read in the initial snapshot phase.)
 - lsn (the Log Sequence Number in Microsoft SQL Server)
+
+== Permissions
+
+To use the default Microsoft SQL Server cache, the user must have permissions to create tables and stored procedures. Refer to `checkpoint_cache_table_name` for additional details.
 		
 
 == Fields
@@ -164,7 +168,7 @@ exclude: dbo.privatetable
 
 === `checkpoint_cache`
 
-A https://www.docs.redpanda.com/redpanda-connect/components/caches/about[cache resource^] to use for storing the current latest Log Sequence Number (LSN) that has been successfully delivered, this allows Redpanda Connect to continue from that Log Sequence Number (LSN) upon restart, rather than consume the entire state of the change table.
+A https://www.docs.redpanda.com/redpanda-connect/components/caches/about[cache resource^] to use for storing the current Log Sequence Number (LSN) that has been successfully delivered, this allows Redpanda Connect to continue from that Log Sequence Number (LSN) upon restart, rather than consume the entire state of the change table.
 
 
 *Type*: `string`
@@ -172,12 +176,12 @@ A https://www.docs.redpanda.com/redpanda-connect/components/caches/about[cache r
 
 === `checkpoint_cache_table_name`
 
-The multipart identifier for the checkpoint cache table name. If no `checkpoint_cache` field is specified, the Microsoft SQL Server CDC component will automatically create a table and stored procedure under the `rpcn` schema to act as a checkpoint cache. This table stores the latest Log Sequence Number (LSN) that has been successfully delivered, allowing Redpanda Connect to resume from that point upon restart rather than reconsume the entire change table.
+The multipart identifier for the checkpoint cache table name. If no `checkpoint_cache` field is specified, this input will automatically create a table and stored procedure under the `rpcn` schema to act as a checkpoint cache. This table stores the latest processed Log Sequence Number (LSN) that has been successfully delivered, allowing Redpanda Connect to resume from that point upon restart rather than reconsume the entire change table.
 
 
 *Type*: `string`
 
-*Default*: `"rpcn.cdc_checkpoint_cache"`
+*Default*: `"rpcn.CdcCheckpointCache"`
 
 ```yml
 # Examples
